Added the Glowshroom (Non Functional) and Glowshroom Planks (Not Craftable/Usable)

--- a/src/main/resources/assets/depthsmod/lang/en_us.json
+++ b/src/main/resources/assets/depthsmod/lang/en_us.json
@@ -1,3 +1,9 @@
 {
-  "item.depthsmod.luciferin_sack": "Luciferin Sack"
+  "item.depthsmod.luciferin_sack": "Luciferin Sack",
+  "item.depthsmod.glowshroom": "Glowshroom",
+
+
+
+
+  "block.depthsmod.glowshroom_planks": "Glowshroom Planks"
 }
